2.8 Vertex paint problems #60393

Closed
opened 2019-01-10 14:05:12 +01:00 by pistol ioan · 5 comments

Win 10, gtx970
Blender 2.8 91a155833e

Sometimes the Vertex paint doesn't work at all, sometimes gives the wrong color, and other times it crashes.
Or when is working, there are some artifacts that can't be painted.

Please see the videos and the blend file.

https://youtu.be/MyF_IqlLwfw

https://youtu.be/8_b3XGkCiHI

bug.blend

Similar problems I found in the other models as well,
As for example, in this case, the monkey was good in 2.79, but when I opened in 2.8 the painted was wrong with some artifacts.
Please see the attached image and blend file.
verd.jpg
MONKEY original 2.79 file.blend

Win 10, gtx970 Blender 2.8 91a155833e59 Sometimes the Vertex paint doesn't work at all, sometimes gives the wrong color, and other times it crashes. Or when is working, there are some artifacts that can't be painted. Please see the videos and the blend file. https://youtu.be/MyF_IqlLwfw https://youtu.be/8_b3XGkCiHI [bug.blend](https://archive.blender.org/developer/F6240637/bug.blend) Similar problems I found in the other models as well, As for example, in this case, the monkey was good in 2.79, but when I opened in 2.8 the painted was wrong with some artifacts. Please see the attached image and blend file. ![verd.jpg](https://archive.blender.org/developer/F6240674/verd.jpg) [MONKEY original 2.79 file.blend](https://archive.blender.org/developer/F6240687/MONKEY_original_2.79_file.blend)
Author

Added subscriber: @istoltoto

Added subscriber: @istoltoto
pistol ioan changed title from Vertex paint problems to 2.8 Vertex paint problems 2019-01-10 14:06:08 +01:00

Added subscribers: @Sergey, @WilliamReynish

Added subscribers: @Sergey, @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-01-10 16:28:31 +01:00

Please report only one bug per report. It's better if you rename this report to 'Vertex Color blending error with Tris & N-Gons' or something similarly descriptive.

Issue # 1 is not a bug.

You are painting with Add mixing, which correctly makes the colors brighter as you paint. This is working as intended.

Issue # 2 is confirmed.

As I expected, the issue is with the new Subdivision Surface modifier, which doesn't handle vertex colors correctly for triangles and N-gons.

Assigning to @Sergey

The issue appears both in Cycles:

Screenshot 2019-01-10 at 16.34.59.png

And in Eevee:

Screenshot 2019-01-10 at 16.35.10.png

And in Workbench:

Screenshot 2019-01-10 at 16.35.29.png

So it seems like an issue in the subsurf modifier, rather than a display issue

Please report only one bug per report. It's better if you rename this report to 'Vertex Color blending error with Tris & N-Gons' or something similarly descriptive. Issue # 1 is not a bug. You are painting with Add mixing, which correctly makes the colors brighter as you paint. This is working as intended. Issue # 2 is confirmed. As I expected, the issue is with the new Subdivision Surface modifier, which doesn't handle vertex colors correctly for triangles and N-gons. Assigning to @Sergey The issue appears both in Cycles: ![Screenshot 2019-01-10 at 16.34.59.png](https://archive.blender.org/developer/F6241839/Screenshot_2019-01-10_at_16.34.59.png) And in Eevee: ![Screenshot 2019-01-10 at 16.35.10.png](https://archive.blender.org/developer/F6241843/Screenshot_2019-01-10_at_16.35.10.png) And in Workbench: ![Screenshot 2019-01-10 at 16.35.29.png](https://archive.blender.org/developer/F6241847/Screenshot_2019-01-10_at_16.35.29.png) So it seems like an issue in the subsurf modifier, rather than a display issue

This issue was referenced by e551ddf712

This issue was referenced by e551ddf712e5e8c8fb4bfcd99158158ac2f7d56e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60393
No description provided.