Fix T60393: Subdiv gives wrong vertex colors